updated the visibility label on dashboard and fixed but where visibility was not being set correctly. fixes #1090 fixes #1010

--- a/app/assets/stylesheets/scholarsphere-bootstrap.css
+++ b/app/assets/stylesheets/scholarsphere-bootstrap.css
@@ -184,3 +184,8 @@ div.btn-group[data-toggle=buttons-radio] input[type=radio] {
     font-weight:bold;
     color: yellow;  
 }
+
+/* used to over ride some defaults set in bootstrap.css */
+th.center, td.center {
+  text-align: center;
+}
